Fixed a glitch when scrollbars are introduced

--- a/include/css/style.css
+++ b/include/css/style.css
@@ -501,6 +501,7 @@ input[type="radio"] {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    width: 198px;
 }
 
 .buttonContainer:hover {
